No longer exclusive to wp3.0, should work the same back to wp2.7 which is my support cut off for this. Added scrollTo to smooth out the the scroll to the reply and the submitted comment. Removed some jQuery 1.4 calls and downgraded to 1.3.2 to make sure to break as little as possible with wp2.9 and less than. However for wp2.7 I force 1.3.2 over 1.2, shouldn't cause a problem as it's on posts / pages only and most people are expecting 1.3.2. Added json2.js for parsing.
git-svn-id: https://plugins.svn.wordpress.org/spectacula-threaded-comments/trunk@256074 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style/comments.css
+++ b/style/comments.css
@@ -20,6 +20,10 @@
 	z-index: 100;
 }
 
+#comments p {
+	margin: 0 0 1em 0;
+}
+
 #comments ul#commentlist ul li {
 	margin-left: 20px;
 }
@@ -291,6 +295,17 @@ ul#trackback-list {
 	display:block;
 }
 
+/*
+ For RPX openid plug-in and
+ anyone else who sticks a
+ small image next to the
+ name.
+*/
+#commentlist cite.fn img {
+	vertical-align: text-top;
+	float: right;
+}
+
 #commentlist .pingback span.date,
 #commentlist .trackback span.date,
 #trackback-list span.date {
@@ -302,4 +317,19 @@ ul#trackback-list {
 	padding-bottom: 10px;
 	margin-bottom: 15px;
 	border-bottom: solid 1px #DFDFDF;
+}
+
+#comment-form blockquote {
+	border-left:0.325em solid #EFEFEF;
+	font-style:italic;
+	margin:0 6% 1.3em;
+	padding-left:0.65em;
+}
+
+
+#comment-form fieldset {
+	border: 0 none;
+	padding: 0;
+	margin: 0;
+	
 }
